--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,10 @@
     "@babel/core": "^7.8.3",
     "@babel/node": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.8.10",
+    "express": "^4.17.2",
+    "mongoose": "^5.13.14",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
@@ -27,5 +28,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0"
-  }
+  },
+    "type": "module"
 }
+
