--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.8.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.2",
     "mongoose": "^5.13.14",
     "nodemon": "^2.0.2"
@@ -29,6 +30,5 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0"
   },
-    "type": "module"
+  "type": "module"
 }
-
